# laba6

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  CPackConfig.cmake  qwerty
.github/workflows/: ci.yml  ci_build.yml
formatter_ex_lib/: CMakeLists.txt  CMakeLists.txt.save  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt
hello_world/: CMakeLists.txt  main.cpp
solver/: CMakeLists.txt  CMakeLists.txt.save  main.cpp
solver_lib/: CMakeLists.txt  solver_lib.cpp  solver_lib.h
